# KukaImplementation-kinetic

./: CMakeLists.txt  HowTo.txt  LICENSE  README.md  package.xml  package.xml.save
include/kuka_implementation/: collector.h  gravity_compensation_position.h
src/: CanonicalStructure.cpp  CanonicalStructure.h  GDMP.cpp  Makefile  collector.cpp  controller.cpp  diff.cpp  energyin2.m  filters_smooth.cpp  function_Rsolution_ATIO.cpp  function_solution_ATIO.cpp  gravity.cpp  gravity_compensation_position.cpp  loadMes.m  loadTime.cpp  main_collector.cpp  master.cpp  master_smooth.cpp  master_smooth_online.cpp  niceReadXYZ.c  niceReadXYZ.cpp  noncasual_lp.cpp  oldmaster.cpp  read  readQ.cpp  test.txt  test_file  test_file.cpp
src/CHECK/: yreadQ.txt
src/Collector/: posCollected.txt  posCollected_cut.txt  posmat.txt
src/GeneralSincDMPKuka/: CanonicalStructure.h  GDMP.cpp  Log.cpp  Makefile  README.md  Validation.m  build.sh  dataFormer.cpp  diff.cpp  loadData.cpp  main  main.cpp  matRead.cpp  read.cpp
src/GeneralSincDMPKuka/data/: DataAccel_1D.txt  DataPos_1D.txt  DataPos_3Dt.txt  Periodic_data0.mat  sim_data.mat
src/Messures/: RrobotJointPositions.txt  RrobotJointTime.txt  robotJointPositions.txt
src/data/: DataPos_3D.txt  DataTimed.txt  DataVel_1D.txt  Periodic_data.mat  pos_git.txt
src/figures/: Ry0.fig  Ry1.fig  Ry2.fig  Ry3.fig  Ry4.fig  Ry5.fig  Ry6.fig  y0.fig  y1.fig  y2.fig  y3.fig  y4.fig  y5.fig  y6.fig
