<?xml version="1.0"?>
<package format="2">
  <name>kuka_implementation</name>
  <version>0.0.0</version>
  <description>The kuka_implementation package</description>

  <maintainer email="despargy@ece.auth.gr">despina</maintainer>


  <license>MIT</license>


  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>autharl_core</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>lwr_robot</build_depend>
  <build_depend>sigproc_lib</build_depend>
  <build_export_depend>autharl_core</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>


  <exec_depend>autharl_core</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>sigproc_lib</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
